# FastAPI-Permissible

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: arq_fastapi_perm.py  real_fastapi_perm.py  sqlalchemy_fastapi_perm.py  test_fastapi_perm.py
fastapi_permissible/: __init__.py
modules/fastapi_tools/: __init__.py
