[tool.poetry]
name = "fastapi-permissible"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
permissible = {path = "modules/permissible", extras = ["sqlalchemy", "arq"]}
fastapi = "<=0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
