[tool.poetry]
name = "fastapi-permissible"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
permissible = {path = "modules/permissible"}
fastapi = "<=0.68.0"
uvicorn = "^0.14.0"
SQLAlchemy = {version = "<=1.3.16", optional = true}
pydantic-sqlalchemy = {version = "^0.0.9", optional = true}
sqlalchemy-filters = {version = "^0.12.0", optional = true}
arq = {version = "^0.21", optional = true}
mutate-function = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy", "sqlalchemy-filters", "pydantic-sqlalchemy"]
arq = ["arq"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

